--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url_short",
+  "name": "sorturl",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.3.2",
+    "nanoid": "^5.0.7",
+    "shortid": "^2.2.16"
   }
 }
